--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ tags_path : tags.html
 #BASE_PATH : http://blog.ankanbiswas.in/uno-dbyll
 BASE_PATH : http://goileo.top
 
-description : 深沉的意志，恢宏的想象和炽热的情感
-title : Goileo Lee
+description : 你尊重别人，别人就尊重你
+title : Next stop
 logo : /assets/images/avatar.jpg
 #cover : /assets/images/background-cover.jpg
 
