--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ logo : /assets/images/avatar.jpg
 
 
 author:
-  name: Goileo Lee
+  name: Zhaojing Wen
   maxim: Stay hungry,Stay foolish
   role: Jekyll Theme
   email: goileolee@foxmail.com
