--- a/_config.yml
+++ b/_config.yml
@@ -33,4 +33,4 @@ author:
   facebook: goileolee
   googleplus: +goileolee
   bio: "Hi, 我是goileolee"
-  uno-dbyll: /assets/images/avatar.jpg
+  uno-dbyll: /assets/images/1.jpg
