--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ logo : /assets/images/1.jpg
 
 
 author:
-  name: Zhaojing Wen
+  name: xiayizhan
   maxim: Stay hungry,Stay foolish
   role: Jekyll Theme
   email: goileolee@foxmail.com
