--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ tags_path : tags.html
 BASE_PATH : http://goileo.top
 
 description : 你尊重别人，别人就尊重你
-title : Next stop
+title : 下一站
 logo : /assets/images/1.jpg
 #cover : /assets/images/background-cover.jpg
 
