--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ categories_path : categories.html
 tags_path : tags.html
 
 #BASE_PATH : http://blog.ankanbiswas.in/uno-dbyll
-BASE_PATH : http://goileo.top
+BASE_PATH : http://wenzhaojing.top
 
 description : 你尊重别人，别人就尊重你
 title : 下一站
