--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   name: xiayizhan
   maxim: Stay hungry,Stay foolish
   role: Jekyll Theme
-  email: goileolee@foxmail.com
+  email: xiayizhan2017@foxmail.com
   github: xiayizhan2017
   twitter: xiayizhan2017
   facebook: xiayizhan2017
